# Mini-Map-Rendering-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
android/: CMakeLists.txt  build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: jni_bridge.cpp
android/src/main/java/com/example/minimap/: MapView.kt  NativeBridge.kt
cmake/: RunLocalOsmVerify.cmake
scripts/: verify_all.ps1
shaders/: map.frag  map.vert  poi_instanced.frag  poi_instanced.vert  raster.frag  raster.vert  ui.frag  ui.vert
shared/: build.gradle.kts
shared/src/commonMain/kotlin/com/example/minimap/: Projection.kt
src/: main.cpp
src/Core/: Application.cpp  Application.h  InputState.cpp  InputState.h  Window.cpp  Window.h
src/GPU/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h
src/Geometry/: MeshTypes.h  PolygonMeshBuilder.cpp  PolygonMeshBuilder.h  PolylineMeshBuilder.cpp  PolylineMeshBuilder.h  Simplifier.cpp  Simplifier.h  Triangulator.cpp  Triangulator.h
src/Map/: Camera.cpp  Camera.h  Distance.cpp  Distance.h  Projection.cpp  Projection.h  RoadNetwork.cpp  RoadNetwork.h  TileManager.cpp  TileManager.h  TileSystem.cpp  TileSystem.h  Types.h
src/Math/: Mat4.cpp  Mat4.h  Vec2.h  Vec3.h
src/Renderer/: Batcher.cpp  Batcher.h  RenderEngine.cpp  RenderEngine.h  TileRenderer.cpp  TileRenderer.h  UiRenderer.cpp  UiRenderer.h
src/Utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
tests/: verify_main.cpp
